2006-05-02  Luca Cavalli  <loopback@slackit.org>

	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):
	Save and restore window maximized state (#340038).

2006-04-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* src/sound-juicer.h:
	* src/sj-main.c:
	Remove ENABLE_DEBUG and use GLib debug flags.  Based on a patch by
	Przemysław Grzegorczyk.

2006-04-29  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the help title (spotted by Przemysław Grzegorczyk)

2006-04-24  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.15.1.

	* Makefile.am:
	Add dev-release target that doesn't install DOAP files, and
	perform the tag too.

2006-04-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	In completion_cb only manipulate the track store if there is stuff
	in it (#333402)

2006-04-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix progress bar calculation (John Thacker, #339062).

2006-04-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for cdio >= 0.70 (John N. Laliberte, #339303)

2006-04-22  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* configure.in: Use po/LINGUAS according to new guidelines. Patch
	from Przemys©aw Grzegorczk (#339197).

2006-04-15  James Livingston  <doclivingston@gmail.com>

	reviewed by: Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c: (filepath_parse_pattern): use GString to create
	the file path, instead of a fixed buffer (#336725)

2006-04-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Update pattern docs (#337638).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-about.c:
	Update about dialog (#328181, Brian Pepple)

	* configure.ac:
	Bump GTK+ dep.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	* src/sj-main.c:
	* src/sj-play.c:
	* src/sound-juicer.h: