@@ -18,7 +18,9 @@
  * Boston, MA 02111-1307, USA.
  */
 
-#include "sound-juicer.h"
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif /* HAVE_CONFIG_H */
 
 #include <string.h>
 #include <glib-object.h>
