@@ -4,17 +4,17 @@
 data/sound-juicer.desktop.in
 data/sound-juicer.glade
 data/sound-juicer.schemas.in
+libjuicer/sj-error.c
+libjuicer/sj-extractor.c
+libjuicer/sj-metadata.c
+libjuicer/sj-metadata-cdtext.c
+libjuicer/sj-metadata-musicbrainz.c
+libjuicer/sj-structures.c
+libjuicer/sj-util.c
 src/bacon-volume.c
 src/gconf-bridge.c
 src/sj-about.c
-src/sj-error.c
 src/sj-extracting.c
-src/sj-extractor.c
 src/sj-main.c
-src/sj-metadata.c
-src/sj-metadata-cdtext.c
-src/sj-metadata-musicbrainz.c
 src/sj-play.c
 src/sj-prefs.c
-src/sj-structures.c
-src/sj-util.c
