@@ -4,6 +4,7 @@ AM_CFLAGS = -export-dynamic @WARN_CFLAGS@
 # General CPP flags. When I can demand automake 1.8, this can become
 # sound_juicer_CPPFLAGS.
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/libjuicer \
 	@DISABLE_DEPRECATED_CFLAGS@ \
 	-DGNOMELOCALEDIR=\""$(prefix)/$(DATADIRNAME)/locale"\"  \
 	-DDATADIR=\""$(datadir)"\" \
@@ -12,8 +13,7 @@ AM_CPPFLAGS = \
 	-DSYSCONFDIR=\""$(sysconfdir)"\" \
 	-DPIXMAPDIR=\""$(datadir)/pixmaps"\" \
 	-DPKGDATADIR=\""$(datadir)/sound-juicer"\" \
-	@MUSICBRAINZ_CFLAGS@ @GSTREAMER_CFLAGS@ \
-	@MEDIA_PROFILES_CFLAGS@ @BURN_CFLAGS@ @UI_CFLAGS@
+	@GSTREAMER_CFLAGS@ @MEDIA_PROFILES_CFLAGS@ @BURN_CFLAGS@ @UI_CFLAGS@
 
 if HAVE_TAGLIB
 AM_CPPFLAGS += @TAGLIB_CFLAGS@
@@ -22,10 +22,6 @@ endif
 # We always build Sound Juicer
 bin_PROGRAMS = sound-juicer
 
-if HAVE_CDIO
-CDIO_SOURCES = 	sj-metadata-cdtext.h sj-metadata-cdtext.c
-endif
-
 if HAVE_TAGLIB
 ID3MUX_FILES = gsttaglib.cc gsttaglib.h
 endif
@@ -33,24 +29,11 @@ endif
 sound_juicer_SOURCES = \
 	dummy.cpp \
 	sound-juicer.h \
-	sj-structures.h \
-	sj-structures.c \
 	sj-main.c \
 	sj-prefs.h \
 	sj-prefs.c \
-	sj-error.h \
-	sj-error.c \
-	sj-extractor.h \
-	sj-extractor.c \
-	sj-metadata.h \
-	sj-metadata.c \
-	$(CDIO_SOURCES) \
-	sj-metadata-musicbrainz.h \
-	sj-metadata-musicbrainz.c \
 	sj-play.c \
 	sj-play.h \
-	sj-util.h \
-	sj-util.c \
 	sj-about.h \
 	sj-about.c \
 	sj-extracting.h \
@@ -60,41 +43,13 @@ sound_juicer_SOURCES = \
 	bacon-volume.c \
 	bacon-volume.h \
 	$(BACON_FILES) \
-	$(ID3MUX_FILES) \
-	$(MARSHALFILES)
+	$(ID3MUX_FILES)
 
-sound_juicer_LDFLAGS = @MUSICBRAINZ_LIBS@ @MEDIA_PROFILES_LIBS@ @GSTREAMER_LIBS@ @BURN_LIBS@ @UI_LIBS@
-if HAVE_CDIO
-sound_juicer_LDFLAGS += @CDIO_LIBS@
-endif
+sound_juicer_LDADD = $(top_builddir)/libjuicer/libjuicer.la
+sound_juicer_LDFLAGS = @MEDIA_PROFILES_LIBS@ @GSTREAMER_LIBS@ @BURN_LIBS@ @UI_LIBS@
 if HAVE_TAGLIB
 sound_juicer_LDFLAGS += @TAGLIB_LIBS@ -lgsttag-0.10
 endif
-
-#
-# Build the GValue marshals
-#
-
-MARSHALFILES = sj-metadata-marshal.h sj-metadata-marshal.c
-GLIB_GENMARSHAL =`pkg-config --variable=glib_genmarshal glib-2.0`
-
-sj-metadata-marshal.h: sj-metadata-marshal.list
-	( $(GLIB_GENMARSHAL) --prefix=metadata_marshal $< \
-	--header > marshal-header.tmp \
-	&& mv marshal-header.tmp $@ ) \
-	|| ( rm -f marshal-header.tmp && exit 1 )
-
-sj-metadata-marshal.c: sj-metadata-marshal.list
-	( $(GLIB_GENMARSHAL) --prefix=metadata_marshal $< \
-	--body > marshal-source.tmp \
-	&& echo "#include \"sj-metadata-marshal.h\"" > $@ \
-	&& cat marshal-source.tmp >> $@ \
-	&& rm -f marshal-source.tmp ) \
-	|| ( rm -f marshal-source.tmp && exit 1 )
-
-BUILT_SOURCES = $(MARSHALFILES)
-CLEANFILES = $(BUILT_SOURCES)
-EXTRA_DIST = sj-metadata-marshal.list
 
 BACON_DIR=$(srcdir)/../../libbacon/src/
 BACON_FILES=bacon-message-connection.h bacon-message-connection.c
