@@ -1,4 +1,5 @@
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/libjuicer \
 	-DGNOME_DISABLE_DEPRECATED=1 \
 	-DGTK_DISABLE_DEPRECATED=1 \
 	-DGDK_DISABLE_DEPRECATED=1 \
@@ -13,9 +14,9 @@ noinst_PROGRAMS = mb-test
 
 mb_test_SOURCES = \
 	mb-test.c \
-	$(top_srcdir)/src/sj-metadata.c \
-	$(top_srcdir)/src/sj-metadata-musicbrainz.c \
-	$(top_srcdir)/src/sj-metadata-marshal.c \
+	$(top_srcdir)/libjuicer/sj-metadata.c \
+	$(top_srcdir)/libjuicer/sj-metadata-musicbrainz.c \
+	$(top_srcdir)/libjuicer/sj-metadata-marshal.c \
 	$(top_srcdir)/src/sj-error.c
 
 mb_test_LDADD = @BURN_LIBS@ @UI_LIBS@ @MUSICBRAINZ_LIBS@
