@@ -1,3 +1,8 @@
+2006-05-09  Ross Burton  <ross@burtonini.com>
+
+	* [most files]:
+	Split into libjuicer, the backend code, and src, the UI.
+
 2006-05-02  Luca Cavalli  <loopback@slackit.org>
 
 	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
